movin stuff about!

--- a/{{ cookiecutter.project_slug }}/Dockerfile
+++ b/{{ cookiecutter.project_slug }}/Dockerfile
@@ -1,8 +1,11 @@
 FROM python:3-alpine
 
-WORKDIR /usr/src/app
+mv /usr/src/app /usr/src/thingy
 
-COPY app .
+WORKDIR /usr/src/thingy
+
+COPY app app
+COPY bootstrap bootstrap
 RUN pip install --no-cache-dir ./bootstrap
 
 CMD [ "python", "bootstrap" ]
